--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
          <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
          <div class="sbuttons">
          <ul>
-         <li><a href="http://www.instagram.com/theitsybitsyband" target="_blank"><img src="images/social/insta1.png" style="width:5.208vw;min-width:75px;"></a></li>
-         <li><a href="http://www.youtube.com/@theitsybitsyband" target="_blank"><img src="images/social/yt1.png" style="width:5.208vw;min-width:75px;"></a></li>
-         <li><a href="http://www.twitter.com/itsytweetsy" target="_blank"><img src="images/social/tw1.png" style="width:5.208vw;min-width:75px;"></a></li>
+         <li><a href="http://www.instagram.com/theitsybitsyband" target="_blank"><img src="images/social/insta1.png" style="width:5.208vw;min-width:75px; alt="Instagram""></a></li>
+         <li><a href="http://www.youtube.com/@theitsybitsyband" target="_blank"><img src="images/social/yt1.png" style="width:5.208vw;min-width:75px; alt="YouTube""></a></li>
+         <li><a href="http://www.twitter.com/itsytweetsy" target="_blank"><img src="images/social/tw1.png" style="width:5.208vw;min-width:75px; alt="Twitter/X""></a></li>
          </ul>
          </div>
      </body>
