Another Google pagespeed change
"viewport" edit, which reduces load times for mobile users

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
      <head>
           <link rel="stylesheet" href="style1.css">
+          <meta name="viewport" content="width=device-width">
           <title>Planet Itsy Bitsy</title>
           <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
           <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
