--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
      <head>
           <link rel="stylesheet" href="style1.css">
           <title>Planet Itsy Bitsy</title>
+          <meta name="description" content="The official website for Itsy Bitsy's music.">
           <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
           <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
           <link rel="icon" type="image/png" sizes="16x16" href="images/fstuff/favicon-16x16.png">
