--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html lang="en">
      <head>
           <link rel="stylesheet" href="style1.css">
           <title>Planet Itsy Bitsy</title>
