No longer planet itsy bitsy (but it will still be in our hearts)
To make it easier on search engines, the title's just going to be "Itsy Bitsy" now.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
      <head>
           <link rel="stylesheet" href="style1.css">
-          <title>Planet Itsy Bitsy</title>
+          <title>Itsy Bitsy</title>
           <meta name="description" content="The official website for Itsy Bitsy's music.">
           <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
           <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
