updated meta description
wanted to include Boise in there, as that separates our band from the majority of "Itsy Bitsy" brands, names, etc. on the internet.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
           <link rel="stylesheet" href="style1.css">
           <title>Itsy Bitsy</title>
-          <meta name="description" content="The official website for Itsy Bitsy's music.">
+          <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
           <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
           <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
           <link rel="icon" type="image/png" sizes="16x16" href="images/fstuff/favicon-16x16.png">
