trying www canonical instead

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
           <link rel="stylesheet" href="style1.css">
           <title>Itsy Bitsy</title>
-          <link rel="canonical" href="https://itsybitsyband.com">
+          <link rel="canonical" href="https://www.itsybitsyband.com">
           <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
           <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
           <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
