--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-     <head>
-          <link rel="stylesheet" href="style1.css">
-          <title>Itsy Bitsy</title>
-          <link rel="canonical" href="https://www.itsybitsyband.com">
-          <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
-          <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
-          <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
-          <link rel="icon" type="image/png" sizes="16x16" href="images/fstuff/favicon-16x16.png">
-          <link rel="manifest" href="images/fstuff/site.webmanifest">
-          <link rel="mask-icon" href="images/fstuff/safari-pinned-tab.svg" color="#e00971">
-          <meta name="msapplication-TileColor" content="#ff0000">
-          <meta name="theme-color" content="#ffffff">
-     </head>
-     <body>
-         <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
-         <div class="sbuttons">
-         <ul>
-           <li>
-             <a href="http://www.instagram.com/theitsybitsyband" aria-label="Visit Itsy Bitsy's Instagram page" target="_blank">
-               <img src="images/social/insta1.png" style="width:5.208vw;min-width:75px;" alt="Instagram">
-             </a>
-           </li>
-           <li>
-             <a href="http://www.youtube.com/@theitsybitsyband" aria-label="Visit Itsy Bitsy's YouTube channel" target="_blank">
-               <img src="images/social/yt1.png" style="width:5.208vw;min-width:75px;" alt="YouTube">
-             </a>
-           </li>
-           <li>
-             <a href="http://www.twitter.com/itsytweetsy" aria-label="Visit Itsy Bitsy's Twitter/X page" target="_blank">
-               <img src="images/social/tw1.png" style="width:5.208vw;min-width:75px;" alt="Twitter/X">
-             </a>
-           </li>
-         </ul>
-         </div>
-     </body>
+ <head>
+  <title>Itsy Bitsy</title>
+  <link rel="canonical" href="https://www.itsybitsyband.com">
+  <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
+  <link rel="stylesheet" href="style1.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/fstuff/favicon-16x16.png">
+  <link rel="manifest" href="images/fstuff/site.webmanifest">
+  <link rel="mask-icon" href="images/fstuff/safari-pinned-tab.svg" color="#e00971">
+  <meta name="msapplication-TileColor" content="#ff0000">
+  <meta name="theme-color" content="#ffffff">
+ </head>
+ <body>
+  <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
+  <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
+   <li>
+    <a href="https://instagram.com/theitsybitsyband" aria-label="Visit Itsy Bitsy's Instagram page" target="_blank">
+     <button class="soc">
+      <img src="images/social/insta.svg" style="width:37.5px;height:37.5px;margin:auto;">
+     </button>
+    </a>
+   </li>
+   <li>
+    <a href="https://youtube.com/@theitsybitsyband" aria-label="Visit Itsy Bitsy's YouTube channel" target="_blank">
+     <button class="soc">
+      <img src="images/social/yt.svg" style="width:37.5px;height:37.5px;margin:auto;">
+     </button>
+    </a>
+   </li>
+   <li>
+    <a href="https://twitter.com/itsytweetsy" aria-label="Visit Itsy Bitsy's Twitter/X page" target="_blank">
+     <button class="soc">
+      <img src="images/social/twit.svg" style="width:37.5px;height:37.5px;margin:auto;">
+     </button>
+    </a>
+   </li>
+  </ul>
+ </body>
 </html>
