Added aria and alt labels for buttons and images(i forgor)

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
    <li>
-    <a href="https://instagram.com/theitsybitsyband" aria-label="Visit Itsy Bitsy's Instagram page" target="_blank">
-     <button class="soc">
-      <img src="images/social/insta.svg" style="width:37.5px;height:37.5px;margin:auto;">
+    <a href="https://instagram.com/theitsybitsyband" aria-label="Itsy Bitsy's Instagram page" target="_blank">
+     <button class="soc" aria-label="Click to visit Itsy Bitsy's Instagram page">
+      <img src="images/social/insta.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Instagram icon">
      </button>
     </a>
    </li>
    <li>
-    <a href="https://youtube.com/@theitsybitsyband" aria-label="Visit Itsy Bitsy's YouTube channel" target="_blank">
-     <button class="soc">
-      <img src="images/social/yt.svg" style="width:37.5px;height:37.5px;margin:auto;">
+    <a href="https://youtube.com/@theitsybitsyband" aria-label="Itsy Bitsy's YouTube channel" target="_blank">
+     <button class="soc" aria-label="Click to visit Itsy Bitsy's YouTube channel">
+      <img src="images/social/yt.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="YouTube icon">
      </button>
     </a>
    </li>
    <li>
-    <a href="https://twitter.com/itsytweetsy" aria-label="Visit Itsy Bitsy's Twitter/X page" target="_blank">
-     <button class="soc">
-      <img src="images/social/twit.svg" style="width:37.5px;height:37.5px;margin:auto;">
+    <a href="https://twitter.com/itsytweetsy" aria-label="Itsy Bitsy's Twitter/X page" target="_blank">
+     <button class="soc" aria-label="Click to visit Itsy Bitsy's Twitter/X page">
+      <img src="images/social/twit.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Twitter/X icon">
      </button>
     </a>
    </li>
   </ul>
-  <p style="color:white;font-size:9px;" class="bottomright">©2024 Itsy Bitsy.</p>
+  <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
  </body>
 </html>
