nah google, don't translate itsy bitsy for us
- and also here are some keywords (but Google doesn't use them apparently (though I understand why but still), lame!)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="canonical" href="https://www.itsybitsyband.com">
   <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
   <link rel="stylesheet" href="style1.css">
+  <meta name="googlebot" content="notranslate">
+  <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
