added opengraph social support
added preview image & some facebook thingys to make sharing the website cooler

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  
+  <meta property="og:url" content="https://www.itsybitsyband.com">
+  <meta property="og:image" content="images/social/itsybitsysat.jpg">
+  <meta property="og:title" content="Itsy Bitsy">
+  <meta property="og:description" content="The official page for Itsy Bitsy.">
+
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/fstuff/favicon-16x16.png">
