wanted a longer shared description, who can blame me?

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="https://www.itsybitsyband.com">
   <meta property="og:image" content="images/social/itsybitsysat.jpg">
   <meta property="og:title" content="Itsy Bitsy">
-  <meta property="og:description" content="The official page for Itsy Bitsy.">
+  <meta property="og:description" content="The official page for the music of Boise's own Itsy Bitsy.">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
