--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   
   <meta property="og:url" content="https://www.itsybitsyband.com">
+  <meta property="og:type" content="website">
   <meta property="og:image" content="images/social/itsybitsyshar2.png">
   <meta property="og:title" content="Itsy Bitsy">
   <meta property="og:description" content="The official page for the music of Boise's own Itsy Bitsy.">
