--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
 
   
   <meta property="og:url" content="https://www.itsybitsyband.com">
