added email button
added email button to socbar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
      </button>
     </a>
    </li>
+   <li>
+    <a href="mailto:band.itsybitsy@gmail.com" aria-label="Itsy Bitsy's email address" target="_blank">
+     <button class="soc" aria-label="Click to send an email to Itsy Bitsy">
+      <img src="images/social/email.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="email icon">
+     </button>
+    </a>
+   </li>
   </ul>
   <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
  </body>
