--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Site developed by Brian M. Dyer-->
 <html lang="en">
  <head>
   <title>Itsy Bitsy</title>
@@ -57,5 +58,6 @@
    </li>
   </ul>
   <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
+  <p style="color:white;font-size:12px;" class="bottomleft">Tovi S., Lilly F., Maz D. B., Jack T., Brian D.</p>
  </body>
 </html>
