added new "shows" page
really proud of this one

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
  </head>
  <body>
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
+  <ul style="list-style-type:none;padding:0;margin:0;" class="socbar2">
+   <li>
+    <a href="shows.html" style="text-decoration:none;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
+     <button class="soc2" aria-label="Click to see Itsy Bitsy's upcoming shows.">
+      <p style="color:white;font-size:12px;" class="buttonp"><b>UPCOMING SHOWS</b></p>
+     </button>
+    </a>
+   </li>
+  </ul>
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
    <li>
     <a href="https://instagram.com/theitsybitsyband" aria-label="Itsy Bitsy's Instagram page" target="_blank">
@@ -57,7 +66,6 @@
     </a>
    </li>
   </ul>
-  <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy.</p>
-  <p style="color:white;font-size:12px;" class="bottomleft">Tovi S., Lilly F., Maz D. B., Jack T., Brian D.</p>
+  <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
  </body>
 </html>
