changed og image for "shows"

--- a/shows.html
+++ b/shows.html
@@ -13,7 +13,7 @@
   
   <meta property="og:url" content="https://www.itsybitsyband.com/shows">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/itsyposter.24.11.2.webp">
+  <meta property="og:image" content="images/og.itsyposter.24.11.2.webp">
   <meta property="og:title" content="See Itsy Bitsy On November 2nd!">
   <meta property="og:description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for the music of Boise's own Itsy Bitsy.">
 
