nevermind then lol

--- a/shows.html
+++ b/shows.html
@@ -38,7 +38,7 @@
     </a>
    </li>
   </ul>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1444.1301342658817!2d-116.22073444233024!3d43.6219416089118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef9ee058c3aed%3A0x84036d7f11826069!2sfolks!5e0!3m2!1sen!2sus!4v1730089696995!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="easy" referrerpolicy="no-referrer-when-downgrade" title="Location on Google Maps"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1444.1301342658817!2d-116.22073444233024!3d43.6219416089118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef9ee058c3aed%3A0x84036d7f11826069!2sfolks!5e0!3m2!1sen!2sus!4v1730089696995!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Location on Google Maps"></iframe>
   <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
  </body>
 </html>
