updated canon URLs on index
title says it all

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
  <head>
   <title>Itsy Bitsy</title>
-  <link rel="canonical" href="https://www.itsybitsyband.com">
+  <link rel="canonical" href="https://itsybitsyband.com">
   <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
   <link rel="stylesheet" href="style1.css">
   <meta name="googlebot" content="notranslate">
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   
-  <meta property="og:url" content="https://www.itsybitsyband.com">
+  <meta property="og:url" content="https://itsybitsyband.com">
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/social/itsybitsyshar2.png">
   <meta property="og:title" content="Itsy Bitsy">
