--- a/shows.html
+++ b/shows.html
@@ -3,7 +3,7 @@
 <html lang="en">
  <head>
   <title>See Itsy Bitsy on November 2nd!</title>
-  <link rel="canonical" href="https://www.itsybitsyband.com/shows">
+  <link rel="canonical" href="https://itsybitsyband.com/shows">
   <meta name="description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for the music of Boise's own Itsy Bitsy.">
   <link rel="stylesheet" href="shows.styles.css">
   <meta name="googlebot" content="notranslate">
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   
-  <meta property="og:url" content="https://www.itsybitsyband.com/shows">
+  <meta property="og:url" content="https://itsybitsyband.com/shows">
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/og.itsyposter.24.11.2.webp">
   <meta property="og:title" content="See Itsy Bitsy On November 2nd!">
