attempt at removing '.html' from address bar
title says it all

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar2">
    <li>
-    <a href="shows.html" style="text-decoration:none;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
+    <a href="./shows" style="text-decoration:none;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
      <button class="soc2" aria-label="Click to see Itsy Bitsy's upcoming shows.">
       <p style="color:white;font-size:12px;" class="buttonp"><b>UPCOMING SHOWS</b></p>
      </button>
