--- a/shows.html
+++ b/shows.html
@@ -31,7 +31,7 @@
   </a>
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
    <li>
-    <a href="index.html" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
+    <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
      <button class="soc" aria-label="Click to return to the main page">
       <p style="color:black;font-size:14px;" class="buttonp"><b>RETURN</b></p>
      </button>
