adding meta keywords because why not
also differentiated one line of the shows style css from style1.css

--- a/shows.html
+++ b/shows.html
@@ -27,7 +27,7 @@
  </head>
  <body>
   <a target="_blank" href="images/itsyposter.24.11.2.webp">
-  <img src="images/itsyposter.24.11.2.webp" alt="Itsy Bitsy's show flyer for November 2nd" class="centerlogo">
+  <img src="images/itsyposter.24.11.2.webp" alt="Itsy Bitsy's show flyer for November 2nd" class="centerposter">
   </a>
   <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
    <li>
