--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
   <link rel="stylesheet" href="style1.css">
   <meta name="googlebot" content="notranslate">
-  <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
+  <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   
