--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <title>Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com">
-  <meta name="description" content="The official page for the music of Boise's own Itsy Bitsy.">
+  <meta name="description" content="The official page of Boise's own Itsy Bitsy.">
   <link rel="stylesheet" href="style1.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/social/itsybitsyshar2.png">
   <meta property="og:title" content="Itsy Bitsy">
-  <meta property="og:description" content="The official page for the music of Boise's own Itsy Bitsy.">
+  <meta property="og:description" content="The official page of Boise's own Itsy Bitsy.">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
@@ -27,10 +27,10 @@
  </head>
  <body>
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
-  <ul style="list-style-type:none;padding:0;margin:0;" class="socbar2">
+  <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
    <li>
     <a href="./shows" style="text-decoration:none;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
-     <button class="soc2" aria-label="Click to see Itsy Bitsy's upcoming shows.">
+     <button class="men" aria-label="Click to see Itsy Bitsy's upcoming shows.">
       <p style="color:white;font-size:12px;" class="buttonp"><b>UPCOMING SHOWS</b></p>
      </button>
     </a>
