--- a/shows.html
+++ b/shows.html
@@ -29,16 +29,23 @@
   <a target="_blank" href="images/itsyposter.24.11.2.webp">
   <img src="images/itsyposter.24.11.2.webp" alt="Itsy Bitsy's show flyer for November 2nd" class="centerposter">
   </a>
-  <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
+  <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
    <li>
     <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
-     <button class="soc" aria-label="Click to return to the main page">
+     <button class="men" aria-label="Click to return to the main page">
       <p style="color:white;font-size:14px;" class="buttonp"><b>RETURN</b></p>
      </button>
     </a>
    </li>
   </ul>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1444.1301342658817!2d-116.22073444233024!3d43.6219416089118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef9ee058c3aed%3A0x84036d7f11826069!2sfolks!5e0!3m2!1sen!2sus!4v1730089696995!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Location on Google Maps"></iframe>
+  <ul style="list-style-type:none;padding:0;margin:0;" class="socbar">
+   <li>
+    <a href="https://www.google.com/maps/place/folks/@43.621995,-116.220756,16z/data=!4m6!3m5!1s0x54aef9ee058c3aed:0x84036d7f11826069!8m2!3d43.6219949!4d-116.2207557!16s%2Fg%2F11v5c1rw5t?hl=en&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D" style="text-decoration:none;" aria-label="Link to the location of Itsy Bitsy's show" target="_blank">
+     <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show">
+      <img src="images/shows/venueicon.svg" style="width:75px;height:50px;margin:auto;" alt="Venue icon">
+     </button>
+    </a>
+  </ul>
   <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
  </body>
 </html>
