Added Gallery page, updated image folders, really tired
probably gonna be the biggest update for a while. I added a whole damn itsy bitsy image gallery!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <title>Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com">
-  <meta name="description" content="The official page of Boise's own Itsy Bitsy.">
+  <meta name="description" content="The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <link rel="stylesheet" href="style1.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
@@ -13,9 +13,17 @@
   
   <meta property="og:url" content="https://itsybitsyband.com">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/social/itsybitsyshar2.png">
+  <meta property="og:image" content="images/og/itsybitsyshar2.png">
   <meta property="og:title" content="Itsy Bitsy">
-  <meta property="og:description" content="The official page of Boise's own Itsy Bitsy.">
+  <meta property="og:description" content="The official page of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="itsybitsyband.com">
+  <meta property="twitter:url" content="https://itsybitsyband.com">
+  <meta name="twitter:title" content="Itsy Bitsy">
+  <meta property="twitter:site" content="@ItsyTweetsy">
+  <meta name="twitter:description" content="The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy">
+  <meta name="twitter:image" content="images/og/itsybitsyshar2.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
@@ -29,9 +37,9 @@
   <img src="images/logo.svg" alt="Itsy Bitsy logo" class="centerlogo">
   <ul style="list-style-type:none;padding:0;margin:0;" class="menbar">
    <li>
-    <a href="./shows" style="text-decoration:none;display:none;" aria-label="The 'Shows' page of Itsy Bitsy's website" target="_self">
-     <button class="men" aria-label="Click to see Itsy Bitsy's upcoming shows.">
-      <p style="color:white;font-size:12px;" class="buttonp"><b>UPCOMING SHOWS</b></p>
+    <a href="./gallery" style="text-decoration:none;" aria-label="The 'Gallery' page of Itsy Bitsy's website" target="_self">
+     <button class="men" aria-label="Click to see photos of Itsy Bitsy">
+      <p style="color:white;font-size:12px;" class="buttonp"><b>GALLERY</b></p>
      </button>
     </a>
    </li>
