--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
  <head>
   <title>See Itsy Bitsy on November 2nd!</title>
   <link rel="canonical" href="https://itsybitsyband.com/shows">
-  <meta name="description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for the music of Boise's own Itsy Bitsy.">
+  <meta name="description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <link rel="stylesheet" href="shows.styles.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
@@ -13,9 +13,17 @@
   
   <meta property="og:url" content="https://itsybitsyband.com/shows">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og.itsyposter.24.11.2.webp">
+  <meta property="og:image" content="images/og/itsyposter.24.11.2.webp">
   <meta property="og:title" content="See Itsy Bitsy On November 2nd!">
-  <meta property="og:description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for the music of Boise's own Itsy Bitsy.">
+  <meta property="og:description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="itsybitsyband.com/shows">
+  <meta property="twitter:url" content="https://itsybitsyband.com/shows">
+  <meta name="twitter:title" content="Shows | Itsy Bitsy">
+  <meta property="twitter:site" content="@ItsyTweetsy">
+  <meta name="twitter:description" content="The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy">
+  <meta name="twitter:image" content="images/og/itsyposter.24.11.2.webp">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/fstuff/favicon-32x32.png">
