yeah let's blow this pop-stand

--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
     <h1 style="color:white;font-family:sans-serif;">PHOTO GALLERY</h1>
    </div>
    <div class="image-container">
-    <img src = "images/band/9.webp" loading="lazy" alt="Image of Itsy Bitsy standing in the middle of a street">
+    <img src = "images/band/9.webp" alt="Image of Itsy Bitsy standing in the middle of a street">
     <img src = "images/band/11.webp" loading="lazy" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center.">
     <img src = "images/band/10.webp" loading="lazy" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center.">
     <img src = "images/band/12.webp" loading="lazy" alt="Image of the heads of Itsy Bitsy in a circle.">
