adding extra band image (14.webp)

--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
      <source media="(max-width:400px)" srcset="images/band/responsive/11-400w.webp">
      <source media="(max-width:600px)" srcset="images/band/responsive/11-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/11-800w.webp">
-     <img src="images/band/11.webp" loading="lazy" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center.">
+     <img src="images/band/11.webp" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/10-400w.webp">
@@ -135,6 +135,15 @@
      <source media="(max-width:1200px)" srcset="images/band/responsive/4-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/4-1600w.webp">
      <img src="images/band/4.webp" width="2144" height="1424" alt="Image of Maz playing guitar in Horseshoe Bend.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/14-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/14-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/14-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/14-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/14-1200w.webp">
+     <source media="(max-width:1600px)" srcset="images/band/responsive/14-1600w.webp">
+     <img src="images/band/14.webp" loading="lazy" width="2048" height="1536" alt="Image of Itsy Bitsy playing at Folks candle shop on November 10th, 2023. From left to right: Brian Dyer playing drums, Lilly Furlow playing guitar, Tovi Chance holding a microphone, Jack Tiderman playing bass, and Maz Della Badia playing guitar.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/2-400w.webp">
