making it less difficult to navigate to css shit

--- a/shows.html
+++ b/shows.html
@@ -5,7 +5,7 @@
   <title>See Itsy Bitsy on November 2nd!</title>
   <link rel="canonical" href="https://itsybitsyband.com/shows">
   <meta name="description" content="See details about Itsy Bitsy's upcoming show on November 2nd! The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <link rel="stylesheet" href="css/shows.styles.css">
+  <link rel="stylesheet" href="shows.styles.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
